# LorenzSystemSolver

./: CMakeLists.txt  README.md  input.txt
src/: CMakeLists.txt  LorenzSystemSolver.files  LorenzSystemSolver.includes  main.cpp
src/systemSolver/: AbstractMethodsImpl.h  CMakeLists.txt  solver.cpp  solver.h
src/systemSolver/methodsImplementation/: CMakeLists.txt  adams_explicit_impl.cpp  declaretions.h  euler_explicit_impl.cpp  euler_implicit_impl.cpp  runge_kutta_impl.cpp  shared.cpp  shared.h
src/ui/: CMakeLists.txt  frontend.h  gnuplot_support_shared.cpp
src/ui/console/: CMakeLists.txt  frontend.cpp
src/ui/qtBasedUi/: CMakeLists.txt  frontend.cpp  scatterdatamodifier.cpp  scatterdatamodifier.h
src/utils/: CMakeLists.txt  answer.h  config.cpp  config.h  internal_method_names.h  show_method_names.h
